--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": {
     "url": ""
   },
+  "preferGlobal": true,
   "dependencies": {
     "redis": "~0.7.2",
     "optimist": "~0.3.4"
